<resources>
    <string name="app_name">goFestApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">ruben.monterodominguez</string>
    <string name="nav_header_subtitle2">juancarlos.lucenamonje</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home_second">Home Second</string>

    <string name="location">Localización</string>
    <string name="program">Programa</string>
    <string name="dates">Fechas</string>
    <string name="assistants">Asistentes</string>
    <string name="gofest">GoFest</string>
    <string name="ver">Ver</string>
    <string name="user">Usuario</string>
    <string name="userput">Actualizar Usuario</string>
    <string name="addUser">Agregar Usuario</string>
    <string name="usuario">Usuario:</string>
    <string name="dni">DNI:</string>
    <string name="telefono">Telefono:</string>
    <string name="nacimiento">Nacimiento:</string>
    <string name="event1stDate">25/06/2020</string>
    <string name="tylethecreator">TyleTheCreator</string>
    <string name="tyler_the_creator">Tyler, The Creator</string>
    <string name="event2dDate">26/06/2020</string>
    <string name="Foals">Foals</string>
    <string name="foals">Foalss</string>
    <string name="event3thDate">27/06/2020</string>
    <string name="AltJ">Alt-j</string>
    <string name="Alt_J">AltJ</string>
    <string name="Clairo">Clairo</string>
    <string name="charli_xcx">Charli XCX</string>
    <string name="glass_animals">Glass Animals</string>
    <string name="editar">Editar</string>
    <string name="usuario">Usuario:</string>
    <string name="dni">DNI:</string>
    <string name="telefono">Telefono:</string>
    <string name="nacimiento">Nacimiento:</string>
    <string name="inscripcion">Inscripcion:</string>
    <string name="eliminar">Eliminar</string>
    <string name="agregar">Agregar</string>
    <string name="usuario">Usuario:</string>
    <string name="dni">DNI:</string>
    <string name="telefono">Telefono:</string>
    <string name="nacimiento">Nacimiento:</string>
    <string name="actualizar">Actualizar</string>
</resources>
