<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_assistants"
            android:icon="@drawable/assistants"
            android:title="@string/assistants" />
        <item
            android:id="@+id/nav_program"
            android:icon="@drawable/program"
            android:title="@string/program" />
        <item
            android:id="@+id/nav_date"
            android:icon="@drawable/dates"
            android:title="@string/dates" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/location"
            android:title="@string/location" />
    </group>
</menu>
