<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.program.ProgramFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/program_date1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/event1stDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/tyler_image"
                    android:layout_width="410dp"
                    android:layout_height="230dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="12dp"
                    android:contentDescription="@string/tylethecreator"
                    android:src="@drawable/tyler"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.125"
                    app:layout_constraintStart_toStartOf="parent" />
                <TextView
                    android:id="@+id/tyler_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="184dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/aldrich"
                    android:text="@string/tyler_the_creator"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toBottomOf="@+id/tyler_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tyler_image" />
            </RelativeLayout>
            <TextView
                android:id="@+id/program_date2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/event2dDate"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/foals_image"
                    android:layout_width="419dp"
                    android:layout_height="251dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/foals"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/foals" />
                <TextView
                    android:id="@+id/foals_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="280dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/aldrich"
                    android:text="@string/Foals"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toStartOf="@+id/foals_image"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />
            </RelativeLayout>
            <TextView
                android:id="@+id/program_date3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/event3thDate"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/altj_image"
                android:layout_width="match_parent"
                android:layout_height="227dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/altj"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/Alt_J" />

            <TextView
                android:id="@+id/altj_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/AltJ"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toStartOf="@+id/altj_image"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />
        </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/clairo_image"
                    android:layout_width="520dp"
                    android:layout_height="227dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="0dp"
                    android:contentDescription="@string/Clairo"
                    android:src="@drawable/clairo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/clairo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="184dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/aldrich"
                    android:text="@string/Clairo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toStartOf="@+id/clairo_image"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>